2007-05-25  Matthew Barnes  <mbarnes@redhat.com>

	* e-table-config.c:
	* e-table-config.h:
	Replace GalComboText with a GtkComboBox/GtkListStore (#441010).

2007-05-17  Srinivasa Ragavan  <sragavan@novell.com>

	** Add more support for GMail like sorting.

	* e-table-sorting-utils.c: (e_table_sorting_utils_tree_sort):
	* e-tree-memory-callbacks.c: (etmc_sort_value_at),
	(e_tree_memory_callbacks_class_init),
	(e_tree_memory_callbacks_new):
	* e-tree-memory-callbacks.h:
	* e-tree-model.c: (e_tree_model_class_init),
	(e_tree_model_sort_value_at):
	* e-tree-model.h:

2007-05-16  Srinivasa Ragavan  <sragavan@novell.com>

	* e-tree-table-adapter.c:
	(e_tree_table_adapter_load_expanded_state): Add support for retaining
	default tree expand state

2007-05-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #378441 from Ebby Wiselyn

	* e-table-header-item.c: Added mnemonics

2007-05-12  simon.zheng  <simon.zheng@sun.com>

	* Fix for bug #355919

	* e-table-header-utils.c: (make_composite_pixmap): 
	gdk_rgb_get_visual()->depth always returns preferred visual 
	depth, which isn't always equal to the that of current
	window. Whereas, using -1 will match the depth of the pixmap window 
	to what we have in drawable window, which is the first
	argument of gdk_pixmap_new(). So use -1 instead.

2007-04-20  Matthew Barnes  <mbarnes@redhat.com>

	* e-cell.h:
	* e-cell-pixbuf.c:
	* e-cell-text.c:
	* e-printable.h:
	* e-table-group-container.c:
	Refactor the printing infrastructure. (#426816)

2007-04-19  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #429422

	* e-table-size-test.c (create_table):
	* test-table.c (main):
	* e-cell-combo.c (e_cell_combo_show_popup):
	* e-table-example-1.c (create_table):
	* e-tree.c (header_canvas_size_allocate), (e_tree_setup_header):
	* e-cell-text.c (ect_show_tooltip):
	* e-table-example-2.c (create_table):
	* e-table.c (header_canvas_size_allocate):
	Use gtk_widget_set_size_request() or g_object_set() instead of